# flatten

./: .bumpversion.cfg  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml  publish.yml
flatten/: __init__.py
flatten/tests/: test_all.py
rust/: Cargo.toml  Makefile
src/: lib.rs
src/example/: mod.rs
