[package]
name = "flatten_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "flatten"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
flatten = { path = "./rust", version = "*" }
pyo3 = { version = "0.19", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
