[build-system]
requires = ["maturin>=1.13.3,<2"]
build-backend = "maturin"

[project]
name = "flatten"
authors = [{name = "1kbgz", email = "dev@1kbgz.com"}]
description="Opinionated JSON flattening"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = []
dependencies = []

[project.optional-dependencies]
develop = [
    "bump2version",
    "check-manifest",
    "maturin>=1.13.3,<2",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/1kbgz/flatten"
Homepage = "https://github.com/1kbgz/flatten"

[tool.check-manifest]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "flatten/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
